--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,43 +1,175 @@
 * {
     font-size: 20px;
-    font-family: "American Typewriter"
+    font-family: 'Alata', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
 
 }
 
-.title {
-    font-size: 3rem;
+nav {
+    overflow: hidden;
+    width: 100%;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+
+.logoContainer{
+    float: left;
+    width: 30%;
+}
+
+.logo {
+    font-size: 3.5rem;
     text-align: center;
-    background-color: plum;
+    background-color: red;
+    color: white;
+    height: 100px;
+}
+
+.menuContainer{
+    width: 100%;
+
+}
+
+.menu {
+    background-color: black;
+    color: white;
+    overflow: auto;
+    height: 100px;
+    margin-top: 0;
+    padding: 25px;
+}
+
+.menu li{
+    float: left;
+    list-style-type: none;
+    font-size: 1.8rem;
+    width: 20%;
+    text-align: center;
 }
 
 .container {
     overflow: auto;
-    background-image: linear-gradient(NavajoWhite, Cornsilk);
+    background-color: navajowhite;
+}
+
+h1 {
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 60px;
+}
+
+.toDos {
+    width: 50%;
+    margin: 0 auto;
+    height: 100%;
+    padding: 20px;
+    overflow: auto;
 }
 
 .toDo {
-    width: 30%;
-    height: 100%;
     float: left;
-    border-right: black 2px solid;
-    padding: 20px;
+    width: 100%;
+    margin-bottom: 30px;
+}
 
+.toDo h2 {
+    text-align: center;
+    width: 100%;
+    margin: 0 auto;
+    font-size: 1.5rem;
+    padding-right: 20px;
+}
+
+.options {
+    width: 100%;
+    margin: 30px auto 20px auto;
+    overflow: auto;
+}
+
+.editSection {
+    font-size: 1.2rem;
+    float: left;
+    width: 33%;
+}
+
+.options form {
+    font-size: 1.2rem;
+    float: left;
+    width: 33%;
+}
+
+.button {
+    font-family: inherit;
+    border: none;
+    background-color: red;
+    color: white;
+    text-align: center;
+    font-size: 1rem;
+    width: 90%;
+    height: 40px;
+    cursor: pointer;
+}
+
+.submitEdit {
+    font-family: inherit;
+    border: none;
+    background-color: red;
+    color: white;
+    text-align: center;
+    font-size: 1rem;
+    height: 40px;
+    cursor: pointer;
+}
+
+.edit {
+    width: 90%;
+    margin-bottom: 20px;
+    height: 40px;
+}
+
+.editSubmit input{
+    width: 90%;
+    margin-bottom: 20px;
+}
+
+.editSection form {
+    visibility: hidden;
+    overflow: auto;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.editSection .visible {
+    visibility: visible;
 }
 
 .add {
-    width: 30%;
-    float: left;
-    border-right: black 2px solid;
-    padding: 20px;
+    width: 50%;
+    margin: 0 auto 100px auto;
     height: 100%;
+    padding: 20px;
+    overflow: auto;
+    border-top: white 4px solid;
 }
 
-.tingDun {
-    width: 30%;
-    float: left;
-    padding: 20px;
+.add form {
+    margin: 0 auto;
+}
+
+.completed {
+    width: 50%;
+    margin: 0 auto 100px auto;
     height: 100%;
+    padding: 20px;
+    overflow: auto;
+    border-top: white 4px solid;
+    text-align: center;
 }
