--- a/templates/homepage.phtml
+++ b/templates/homepage.phtml
@@ -2,44 +2,36 @@
 <html lang="en-GB">
 <head>
     <meta charset="UTF-8">
-    <title>Commit You Git! | The To-Do List Tracker</title>
+    <title>COMMIT | Get It Done</title>
+    <script type="text/javascript" src="/js/nav.js" defer></script>
+    <script type="text/javascript" src="/js/edit.js" defer></script>
+    <link href="https://fonts.googleapis.com/css?family=Alata&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" type="text/css">
 </head>
 <body>
 
-<h1 class="title">COMMIT YOU GIT!</h1>
+<nav>
+    <div class="logoContainer">
+        <div class="logo">
+            COMMIT
+        </div>
+    </div>
+    <div class="menuContainer">
+        <ul class="menu">
+            <li>TO-DOS</li>
+            <li>ADD</li>
+            <li>COMPLETE</li>
+        </ul>
+    </div>
+</nav>
 
 <div class="container">
 
-    <div class="toDo">
+    <div class="toDos">
         <h1>Your To-Do List:</h1>
 
         <?php
-        $output = '';
-        foreach ($toDos as $toDo){
-            $id = $toDo['id'];
-            $completed = $toDo['completed'];
-            if ($completed == 0){
-                $output .="<h2>Thing to do no." . $id . ": " . $toDo['name'] . "</h2>
-                        <form action='/completed' method='post'>
-                            <input name='id' value='" . $id . "' type='hidden'>
-                            <label>Mark To-Do Completed:</label>
-                            <input type='submit' name='completed' value='completed'>
-                        </form>
-                        <form action='/delete' method='post'>
-                            <input name='id' value='" . $id . "' type='hidden'>
-                            <label>Delete To-Do:</label>
-                            <input type='submit' name='delete' value='delete'>
-                        </form>
-                        <form action='/update' method='post'>
-                            <label>Edit To-Do:</label>
-                            <input name='name' type='text'>
-                            <input name='id' value='" . $id . "' type='hidden'>
-                            <input type='submit'>
-                        </form>";
-            }
-        }
-        echo $output;
+        echo ToDoApp\helpers\DisplayToDoHelper::displayToDos($toDos);
         ?>
     </div>
 
@@ -47,33 +39,17 @@
         <h1>Add Thing To Do</h1>
 
         <form action="/add" method="post" >
-            <input name="name" type="text">
-            <input type="submit" value="Add To Do">
+            <input class='edit' name="name" type="text">
+            <input class='button' type="submit" value="Add To Do">
         </form>
     </div>
 
-    <div class="tingDun">
+    <div class="completed">
         <h1>Things You've Completed</h1>
 
 
         <?php
-        $output = '';
-        foreach ($toDos as $toDo){
-            $id = $toDo['id'];
-            $completed = $toDo['completed'];
-            if ($completed == 1){
-                $output .="<h2>You completed no." . $id . ": " . $toDo['name'] . ". Didn't you do well!</h2>
-                        <form action='/completed' method='post'>
-                            <input name='id' value='" . $id . "' type='hidden'>
-                            <input type='submit' name='completed' value='completed'>
-                        </form>
-                        <form action='/delete' method='post'>
-                            <input name='id' value='" . $id . "' type='hidden'>
-                            <input type='submit' name='delete' value='delete'>
-                        </form>";
-            }
-        }
-        echo $output;
+        echo ToDoApp\helpers\DisplayCompletedToDoHelper::displayCompletedToDos($toDos);
         ?>
     </div>
 
