--- a/templates/homepage.phtml
+++ b/templates/homepage.phtml
@@ -27,8 +27,8 @@
 
 <div class="container">
 
-    <div class="toDos">
-        <h1>Your To-Do List:</h1>
+    <div class="stories">
+        <h1>Things To Do:</h1>
 
         <?php
         echo ToDoApp\helpers\DisplayToDoHelper::displayToDos($toDos);
