--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,8 +160,9 @@ h1 {
     border-top: white 4px solid;
 }
 
-.add form {
-    margin: 0 auto;
+.add form input{
+    margin: 20px auto 0 auto;
+    width: 100%;
 }
 
 .completed {
