--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@ nav {
 .menu li{
     float: left;
     list-style-type: none;
+    color: white;
     font-size: 1.8rem;
     width: 20%;
     text-align: center;
